# Django_third_homework

./: README.md  db.sqlite3  pyproject.toml
config/: __init__.py  celery.py  settings.py
shop_app/: tasks.py  views.py
shop_app/tests/: conftest.py  test_delete.py  test_edit.py  test_form.py  test_get.py  test_model.py  test_post.py  test_views.py
