[tool.poetry]
name = "django-third-homework"
version = "0.1.0"
description = ""
authors = ["sergei <dasv@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
faker = "^33.3.1"
pytest = "^8.3.4"
pytest-django = "^4.9.0"
pytest-mock = "^3.14.0"
celery = {extras = ["redis"], version = "^5.4.0"}
django-celery-results = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
